--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -461,6 +462,10 @@ section:not(.hero){
     border-right-color: var(--dark-blue-color);
  }
 
+ .light-grey .item-skill{
+    background-color: var(--dark-color);
+}
+
 .skill-name{
     font-size: 3rem;
     text-transform: uppercase;
@@ -810,4 +815,117 @@ section:not(.hero){
         width: 100%;
         transform: initial;
     }
+
+    .hero{
+        height: 80vh;
+    }
+
+    .hero::after{
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, .8);
+        z-index: 999;
+        opacity: 0;
+        transform: scale(0);
+        transition: opacity .5s;
+    }
+
+    .is-open .hero::after{
+        opacity: 1;
+        transform: scale(1)
+    }
+
+    .name-heading{
+        font-size: 25vw;
+    }
+
+    .portfolio-item-info{
+        background-color: rgba(0, 0, 0, .5);
+        opacity: 1;
+    }
+
+    .project-name{
+        transform: translateY(0);
+    }
+
+    .project-type{
+        transform: translateY(0);
+    }
+
+    .info-tbn:first-child{
+        margin-bottom: 1rem;
+    }
 }
+
+@media screen and (max-width: 768px) {
+    .grid,
+    .my-portfolio .grid{
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .hero{
+        height: 50rem;
+    }
+
+    .call-to-action p{
+        font-size: 2rem;
+    }
+
+    .motto{
+        height: 60vh;
+    }
+
+    .quote::before,
+    .quote::after{
+        font-size: 10rem;
+    }
+
+    .quote::before{
+        top: -4rem;
+        left: -3rem;
+    }
+
+    .quote::after{
+        bottom: -4rem;
+        right: -3rem;
+    }
+
+    .quote-by{
+        margin-top: 4rem;
+    }
+
+    .timeline-entry-name{
+        display: block;
+        font-size: 1.6rem;
+
+    }
+
+    .timeline-heading span{
+        font-size: 1.4rem;
+    }
+
+}
+@media screen and (orientation: landscape) and (max-width: 1000px){
+    .nav{
+        overflow-y: scroll;
+    }
+
+    .hero{
+        height: initial;
+        min-height: 100vh;
+    }
+}
+
+
+@media screen and (min-width: 1925px){
+    html{
+        font-size: 75%;
+    }
+}
+
